--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ flutter:
 
   uses-material-design: true
 
+  assets:
+    - test/assets/
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
