feat(util): 新增i18n配置支持
通过ConfigLoader加载i18n配置文件

[skip ci]

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ flutter:
 
   assets:
     - test/assets/
+    - assets/
+    - assets/i18n/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
