feat(util): 完成播放控制器的基本控制功能
PlayHandler()类，底层可以替换audioPlayer的实现

[skip ci]

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
 
   cupertino_icons: ^1.0.1
   flutter_audio_desktop: ^0.0.7
-
+  path_provider: ^1.6.24
 
   file_chooser:
     git:
