test(util): 对flutter_audio_desktop插件进行测试
对flutter_audio_desktop插件进行测试

[skip ci]

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,9 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.1
-  flutter_audio_desktop: ^0.0.7
+  flutter_audio_desktop:
+    path: ../flutter_audio_desktop
+
   path_provider: ^1.6.24
 
   file_chooser:
