--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   fast_gbk: ^0.1.2
 
   file_picker_cross: ^4.2.6
+  sqflite_common_ffi: ^1.1.1+1
+  crypto: ^2.1.5
 #  file_chooser:
 #    git:
 #      url: git://github.com/google/flutter-desktop-embedding.git
