--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,8 @@ dependencies:
   path_provider: ^1.6.24
   fast_gbk: ^0.1.2
 
-  act_like_desktop:
-    path: ../act_like_desktop
+  act_like_desktop: ^0.0.1
+  event_bus: ^1.1.1
 
 #  file_picker_cross: ^4.2.6
   sqflite_common_ffi: ^1.1.1+1
