refactor(util): Add google fonts library
Linux don't support chinese very well.

[skip ci]

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,18 +44,31 @@ dependencies:
       url: git://github.com/google/flutter-desktop-embedding.git
       path: plugins/window_size
       ref: 040f36c82b63e8764ec2fd97066767503a667b6d
+
+  google_fonts: ^1.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 flutter:
-
-  uses-material-design: true
-
   assets:
     - test/assets/
     - assets/
     - assets/i18n/
+    - assets/fonts/
+
+  fonts:
+    - family: NotoSansSC
+      fonts:
+        - asset: assets/fonts/NotoSansSC-Regular.otf
+        - asset: assets/fonts/NotoSansSC-Bold.otf
+          weight: 700
+        - asset: assets/fonts/NotoSansSC-Thin.otf
+          weight: 100
+        - asset: assets/fonts/NotoSansSC-Light.otf
+          weight: 300
+
+  uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
