--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
   path_provider: ^1.6.24
   fast_gbk: ^0.1.2
 
-  act_like_desktop: ^0.0.1
+  act_like_desktop:
+    path: ../act_like_desktop
   event_bus: ^1.1.1
   isolate: ^2.0.3
 
